--- a/Writerside/cfg/head-script.html
+++ b/Writerside/cfg/head-script.html
@@ -1,3 +1,17 @@
+<!-- 百度统计 -->
+<!--suppress ES6ConvertVarToLetConst -->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.async = true
+        hm.src = "https://hm.baidu.com/hm.js?d94cb749854dfd7a8a31a85a980c1772";
+        const s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
+
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KDL4Y6B3SS"></script>
 <script>
